[package]
name = "brush-bench-test"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-prefix-sum.path = "../brush-prefix-sum"
brush-render = { path = "../brush-render", features = ["debug-validation"] }
brush-render-bwd.path = "../brush-render-bwd"
brush-sort.path = "../brush-sort"
brush-train.path = "../brush-train"
brush-dataset.path = "../brush-dataset"
brush-fused-ssim.path = "../brush-fused-ssim"
brush-serde.path = "../brush-serde"
brush-process = { path = "../brush-process", features = ["training"] }
brush-vfs.path = "../brush-vfs"

anyhow.workspace = true
image.workspace = true
glam.workspace = true
log.workspace = true
burn = { workspace = true, features = ["autodiff"] }
burn-cubecl.workspace = true
burn-wgpu.workspace = true
rand.workspace = true
wgpu.workspace = true

divan = "0.1.17"
safetensors.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
brush-rerun = { path = "../brush-rerun" }
rerun = { workspace = true }

[dev-dependencies]
brush-kernel = { path = "../brush-kernel" }
brush-wgsl = { path = "../brush-wgsl" }
wasm-bindgen-test = "0.3"
tempfile = "3.23.0"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
# ahash (pulled in via burn-core) uses getrandom 0.3; enable its wasm_js feature
# so the wasm_js cfg backend can compile.
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
env_logger = "0.11"

[[bench]]
name = "training_bench"
harness = false
path = "src/training_bench.rs"

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]
